example/lib/src/generated/errors/errors_localization_fr.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for French (`fr`).
class ErrorsLocalizationFr extends ErrorsLocalization {
  ErrorsLocalizationFr([String locale = 'fr']) : super(locale);

  @override
  String get error => 'Une erreur est survenue';

  @override
  String get unexpectedError => 'Une erreur inattendue s\'est produite';

  @override
  String get bugReportSentText => 'Rapport de bug envoyé avec succès.';
}
